discussion/kv_engine/182556/182556_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53053: Add ItemPagerFactory

Adds a factory class for the item pager tasks. We will extend this
factory to return a  cross-bucket item pager task for buckets with
that feature enabled.

Change-Id: Ib7e0dcba94ca35f7074205f389f7a4f08b278809

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-11-28 22:58:13.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-29 00:50:51.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43040/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/item_pager_factory.h:28:5:
error: use of undeclared identifier "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43040/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21989/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/item_pager_factory.cc:25:51: error: out-of-line definition of "getItemPager" does not match any declaration in "ItemPagerFactory" [clang-diagnostic-error]
std::shared_ptr<NotifiableTask> ItemPagerFactory::getItemPager(
                                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/item_pager_factory.h:28:5: error: use of undeclared identifier "std" [clang-diagnostic-error]
    std::shared_ptr<NotifiableTask> getItemPager(KVBucket& store);
    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21989/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/item_pager_factory.cc:25:51:
error: out-of-line definition of "getItemPager" does not match any declaration in "ItemPagerFactory" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21989/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51274/ : FAILURE

Failure of GoogleTest "VBAdaptorsTest.CrossBucketVisitorsWorksForTwoBuckets":

<pre>
[ RUN      ] VBAdaptorsTest.CrossBucketVisitorsWorksForTwoBuckets
..\kv_engine\engines\ep\tests\module_tests\vb_adapters_test.cc(232): error: Expected equality of these values:
  Vbid(2)
    Which is: vb:2
  firstVisitorLastVbid
    Which is: 4-byte object <01-00 01-00>
..\kv_engine\engines\ep\tests\module_tests\vb_adapters_test.cc(239): error: Expected equality of these values:
  Vbid(2)
    Which is: vb:2
  firstVisitorLastVbid
    Which is: 4-byte object <01-00 01-00>
..\kv_engine\engines\ep\tests\module_tests\vb_adapters_test.cc(240): error: Expected equality of these values:
  Vbid(1)
    Which is: vb:1
  secondVisitorLastVbid
    Which is: 4-byte object <02-00 01-00>
unknown file: error: C++ exception with description "CheckedExecutor failed fetchNextTask" thrown in the test body.
[  FAILED  ] VBAdaptorsTest.CrossBucketVisitorsWorksForTwoBuckets (12 ms)
VBAdaptorsTest.CrossBucketVisitorsWorksForTwoBuckets
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51274/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23515/ : FAILURE

Failure of GoogleTest "ThrottleTest.OpsAreThrottled":

<pre>
[ RUN      ] ThrottleTest.OpsAreThrottled
[2022-11-29T00:39:15.916Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/tests/testapp_serverless/throttle_test.cc:55: Failure
[2022-11-29T00:39:15.916Z] Expected: (3) <= (stats["num_throttled"]), actual: 3 vs 2
[2022-11-29T00:39:15.916Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/tests/testapp_serverless/throttle_test.cc:55: Failure
[2022-11-29T00:39:15.916Z] Expected: (3) <= (stats["num_throttled"]), actual: 3 vs 1
[2022-11-29T00:39:15.916Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/tests/testapp_serverless/throttle_test.cc:55: Failure
[2022-11-29T00:39:15.916Z] Expected: (3) <= (stats["num_throttled"]), actual: 3 vs 0
[2022-11-29T00:39:15.916Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/tests/testapp_serverless/throttle_test.cc:55: Failure
[2022-11-29T00:39:15.916Z] Expected: (3) <= (stats["num_throttled"]), actual: 3 vs 0
[2022-11-29T00:39:15.916Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/tests/testapp_serverless/throttle_test.cc:55: Failure
[2022-11-29T00:39:15.916Z] Expected: (3) <= (stats["num_throttled"]), actual: 3 vs 0
[2022-11-29T00:39:15.916Z] [  FAILED  ] ThrottleTest.OpsAreThrottled (5308 ms)
ThrottleTest.OpsAreThrottled
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23515/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11715/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">1 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11715/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25301/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">1 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25301/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32452/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32452/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21491/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11805/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/747/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24448/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24035/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
